# mcp-workshop

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  llm.md  pyproject.toml  sources.md
.github/workflows/: ci.yml
infra/: README.md  deployment.yaml  kustomization.yaml  namespace.yaml  service.yaml
src/mcp_template/: __init__.py  main.py  models.py  prompts.py  resources.py  server.py  tools.py
src/mcp_template/helpers/: __init__.py  cmd_runner.py  k8s.py  logging.py  telemetry.py
tests/e2e/: test_fastmcp_e2e.py
