[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-template"
version = "0.1.0"
description = "A clean, simple MCP server template"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.15.0",
    "pydantic>=2.11.9",
    "click>=8.3.0",
    "uvicorn>=0.37.0",
    "fastapi>=0.118.0",
    "anyio>=4.11.0",
    "pyyaml>=6.0.3",
    "opentelemetry-sdk>=1.37.0",
    "opentelemetry-instrumentation>=0.58b0",
    "opentelemetry-instrumentation-fastapi>=0.58b0",
    "opentelemetry-exporter-otlp>=1.37.0",
]

[project.optional-dependencies]
dev = [
    "black>=25.9.0",
    "ruff>=0.13.2",
    "mypy>=1.18.2",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "httpx>=0.28.1",
    "pre-commit>=4.3.0",
    "pip-audit>=2.9.0",
    "bandit>=1.8.6",
]

[project.scripts]
mcp-server = "mcp_template.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_template"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
